blocks: half way fixing the cropped image, still to do channel and user block

--- a/components/layout/index.styl
+++ b/components/layout/index.styl
@@ -111,6 +111,14 @@ blockquote
   vertical-align middle
   text-align center
 
+.valign--flex
+  display flex
+  align-items center
+
+.halign--flex
+  display flex
+  justify-content center
+
 .pointer
   cursor pointer
 
